add currency provider to env file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DBNAME=currency
 DBUSER=postgres
 DBPASS=postgres
-DBDSN=psql:host=localhost;dbname=${DBNAME}
+DBDSN=pgsql:host=localhost;dbname=${DBNAME}
+CURRENCY_PROVIDER="http://www.cbr.ru/scripts/XML_daily.asp"
